--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
-welcome to india
-this is venkatesh form hyderabadthis is my family
-mamatha
-fsdfsd
-fsd
-fsd
-f
-ds
-fsfsasfasdf
-sda
-fsda
-f
-asd
-sda
-f
-sda
-fsda
-f
-super
+<html>
+
+	<head>
+
+         <title> my name is venkat </title>
+
+	</head>>
+
+	<body>
+        
+           Hello world
+	</body>
+
+
+
+</html>
